@@ -14,10 +14,10 @@
  */
 package net.rptools.maptool.client.functions;
 
-import java.io.UnsupportedEncodingException;
 import java.math.BigDecimal;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.IllegalFormatConversionException;
 import java.util.List;
 import java.util.regex.Matcher;
@@ -62,7 +62,8 @@ public class StringFunctions extends AbstractFunction {
         "encode",
         "decode",
         "startsWith",
-        "endsWith");
+        "endsWith",
+        "capitalize");
   }
 
   public static StringFunctions getInstance() {
@@ -340,14 +341,10 @@ public class StringFunctions extends AbstractFunction {
                 "macro.function.general.notEnoughParam", functionName, 1, parameters.size()));
       }
       String encoded;
-      try {
-        // Shouldn't this use '&#59;' like
-        // net.rptools.maptool.client.functions.MacroLinkFunction.argsToStrPropList(String) does?
-        encoded = parameters.get(0).toString().replaceAll(";", "&semi;");
-        encoded = URLEncoder.encode(encoded, "utf-8");
-      } catch (UnsupportedEncodingException e) {
-        throw new ParserException(e);
-      }
+      // Shouldn't this use '&#59;' like
+      // net.rptools.maptool.client.functions.MacroLinkFunction.argsToStrPropList(String) does?
+      encoded = parameters.get(0).toString().replaceAll(";", "&semi;");
+      encoded = URLEncoder.encode(encoded, StandardCharsets.UTF_8);
       return encoded;
     }
     if (functionName.equals("decode")) {
@@ -357,14 +354,10 @@ public class StringFunctions extends AbstractFunction {
                 "macro.function.general.notEnoughParam", functionName, 1, parameters.size()));
       }
       String decoded;
-      try {
-        // Shouldn't this use '&#59;' like
-        // net.rptools.maptool.client.functions.MacroLinkFunction.argsToStrPropList(String) does?
-        decoded = URLDecoder.decode(parameters.get(0).toString(), "utf-8");
-        decoded = decoded.replaceAll("&semi;", ";");
-      } catch (UnsupportedEncodingException e) {
-        throw new ParserException(e);
-      }
+      // Shouldn't this use '&#59;' like
+      // net.rptools.maptool.client.functions.MacroLinkFunction.argsToStrPropList(String) does?
+      decoded = URLDecoder.decode(parameters.get(0).toString(), StandardCharsets.UTF_8);
+      decoded = decoded.replaceAll("&semi;", ";");
       return decoded;
     }
     if (functionName.equals("startsWith")) {
@@ -387,8 +380,38 @@ public class StringFunctions extends AbstractFunction {
           ? BigDecimal.ONE
           : BigDecimal.ZERO;
     }
+    if (functionName.equals("capitalize")) {
+      if (parameters.size() < 1) {
+        throw new ParserException(
+            I18N.getText(
+                "macro.function.general.notEnoughParam", functionName, 1, parameters.size()));
+      }
+      return capitalize(parameters.get(0).toString());
+    }
     // should never happen
     throw new ParserException(functionName + "(): Unknown function.");
+  }
+
+  /**
+   * This method returns a version of the passed in string where all the first letters of words are
+   * title case.
+   *
+   * @param str The string converted to title case.
+   * @return The string converted to title case.
+   */
+  private String capitalize(String str) {
+    Pattern pattern = Pattern.compile("(\\p{IsAlphabetic}+)");
+    Matcher matcher = pattern.matcher(str);
+
+    StringBuffer result = new StringBuffer();
+    while (matcher.find()) {
+      String word = matcher.group();
+      matcher.appendReplacement(result, Character.toTitleCase(word.charAt(0)) + word.substring(1));
+    }
+
+    matcher.appendTail(result);
+
+    return result.toString();
   }
 
   /**
@@ -399,7 +422,7 @@ public class StringFunctions extends AbstractFunction {
    * @param resolver The variable resolver used to resolve variables within %{}.
    * @param args The arguments for formating options.
    * @return the formated string.
-   * @throws ParserException
+   * @throws ParserException when an error occurs.
    */
   public String format(String string, VariableResolver resolver, List<Object> args)
       throws ParserException {
@@ -469,7 +492,7 @@ public class StringFunctions extends AbstractFunction {
   /**
    * Joins the array together as a string with a default delimiter of ','.
    *
-   * @param array The array to join.
+   * @param list The list to join.
    * @return the resulting string.
    */
   public String join(List<String> list) {
@@ -479,7 +502,8 @@ public class StringFunctions extends AbstractFunction {
   /**
    * Joins the array together as a string with a default delimiter of ','.
    *
-   * @param array The array to join.
+   * @param list The array to join.
+   * @param delim the delimiter of the list
    * @return the resulting string.
    */
   public String join(List<String> list, String delim) {
@@ -492,7 +516,7 @@ public class StringFunctions extends AbstractFunction {
    * Joins the array together as a string with the specified delimiter.
    *
    * @param array The array to join.
-   * @param demlim The delimiter to use between elements.
+   * @param delim The delimiter to use between elements.
    * @return the resulting string.
    */
   public String join(String[] array, String delim) {
